styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    box-sizing: border-box;
    font-family: Roboto;
}

.container {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 50%;
    margin: 64px auto;
}

.header {
    border: solid 1px black;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 24px;
}

.main {
    border: solid 1px black;
    padding: 24px;
}

.words {
    display: flex;
    border: solid 1px black;
    height: 300px;
}

.number-words {
    padding: 24px;
    flex: 1;
    background-color: aquamarine;
}

.non-number-words {
    padding: 24px;
    flex: 1;
    background-color: beige;
}

